# auth-system

./: .pylintrc  Makefile  main.py  pyproject.toml  settings.py
auth_system/: exceptions.py  models.py  routes.py
auth_system/controllers/: user.py
auth_system/db/: query.py
auth_system/middleware/: auth.py
auth_system/services/: user.py
